--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -5,3 +5,13 @@
     position: fixed;
     top: 0;
 }
+
+.cabecera__buscar__item{
+display: none;
+}
+
+@media(min-width:834px){
+    .cabecera__buscar__item{
+        display: block;
+    }
+}
