--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,3 +1,4 @@
+/* Cabecera */
 .cabecera__container {
     display: flex;
     justify-content: space-between;
@@ -10,8 +11,22 @@
 display: none;
 }
 
+/* Rodapie */
+.rodapie__container{
+    display: flex;
+    /* flex-direction: column;
+    flex-wrap: wrap; 
+    lo mismo que abajo*/
+    flex-flow: column wrap;
+}
+
 @media(min-width:834px){
+    /* Cabecera */
     .cabecera__buscar__item{
         display: block;
+    }
+    /* Rodapie */
+    .rodapie__container{
+        justify-content: space-between;
     }
 }
