--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -31,6 +31,12 @@
     align-self: center;
 }
 
+.menu__itens{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
 .menu__lista:nth-child(2),
 .menu__lista:nth-child(3),
 .menu__lista:nth-child(4) {
@@ -64,6 +70,23 @@
     .cabecera__buscar__item {
         display: block;
     }
+
+    /* Menu lateral */
+
+    .menu__container {
+        position: fixed;
+        bottom: 0%;
+        height: 100%;
+        width: 74px;
+    }
+    
+    .menu__lista {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    
+    }
+    
 
     /* Rodapie */
     .rodapie__container {
