Actualiza menu en version mobile y tablet

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -74,16 +74,17 @@
     /* Menu lateral */
 
     .menu__container {
-        position: fixed;
-        bottom: 0%;
-        height: 100%;
+        left: 0;
+        height: auto;
         width: 74px;
+        top: 80px;
     }
     
     .menu__lista {
-        display: flex;
         flex-direction: column;
-        width: 100%;
+        justify-content: flex-start;
+        padding-top: 15px;
+        gap: 33px;
     
     }
     
