--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -31,7 +31,7 @@
     align-self: center;
 }
 
-.menu__itens{
+.menu__itens {
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -79,18 +79,36 @@
         width: 74px;
         top: 80px;
     }
-    
+
     .menu__lista {
         flex-direction: column;
         justify-content: flex-start;
         padding-top: 15px;
         gap: 33px;
-    
+
     }
-    
+
 
     /* Rodapie */
     .rodapie__container {
         justify-content: space-between;
+    }
+}
+
+@media(min-width:1024px) {
+
+    .menu__container {
+        width: 239px;
+        overflow: scroll;
+    }
+
+    .menu__lista:nth-child(2),
+    .menu__lista:nth-child(3),
+    .menu__lista:nth-child(4) {
+        display: flex;
+    }
+    .menu__lista{
+        height: auto;
+        padding: 20px 17px 20px 15px;
     }
 }
